--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 <body>
     <nav class="navbar  navbar-expand-md navbar-dark bg-naranja fixed-top">
-        <a class="navbar-brand" href="#"> <img src="img/icon-taco-256.png" width="32" height="32" alt="logo" /> Tacos
-            Perry!</a>
+        <a class="navbar-brand" href="#"> <img src="img/icon-taco-256.png" width="32" height="32" alt="logo" /> Tacos Perry!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
